--- a/01-prepare/01-prepare.ipynb
+++ b/01-prepare/01-prepare.ipynb
@@ -278,35 +278,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Can we make this quick?  Roxanne Korrine and Andrew Barrett are having an incredibly horrendous public break- up on the quad.  Again.&lt;&gt;Well, I thought we'd start with pronunciation, if that's okay with you.&lt;&gt;Not the hacking and gagging and spitting part.  Please.&lt;&gt;Okay... then how 'bout we try out some French cuisine.  Saturday?  Night?</td>\n",
+       "      <td>hi , how are you doing ? i am getting ready to do some cheetah chasing to stay in shape .&lt;&gt;you must be very fast . hunting is one of my favorite hobbies .&lt;&gt;i am ! for my hobby i like to do canning or some whittling .&lt;&gt;i also remodel homes when i am not out bow hunting .&lt;&gt;that is neat . when i was in high school i placed 6th in 100m dash !&lt;&gt;that is awesome . do you have a favorite season or time of year ?&lt;&gt;i do not . but i do have a favorite meat since that is all i eat exclusively .&lt;&gt;what is your favorite meat to eat ?&lt;&gt;i would have to say its prime rib . do you have any favorite foods ?&lt;&gt;i like chicken or macaroni and cheese .&lt;&gt;do you have anything planned for today ? i think i am going to do some canning .&lt;&gt;i am going to watch football . what are you canning ?&lt;&gt;i think i will can some jam . do you also play footfall for fun ?&lt;&gt;if i have time outside of hunting and remodeling homes . which is not much !&lt;&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>You're asking me out.  That's so cute. What's your name again?&lt;&gt;Forget it.</td>\n",
+       "      <td>hi , how are you doing today ?&lt;&gt;i am spending time with my 4 sisters what are you up to&lt;&gt;wow , four sisters . just watching game of thrones .&lt;&gt;that is a good show i watch that while drinking iced tea&lt;&gt;i agree . what do you do for a living ?&lt;&gt;i am a researcher i am researching the fact that mermaids are real&lt;&gt;interesting . i am a website designer . pretty much spend all my time on the computer .&lt;&gt;that is cool my mom does the same thing&lt;&gt;that is awesome . i have always had a love for technology .&lt;&gt;tell me more about yourself&lt;&gt;i really enjoy free diving , how about you , have any hobbies ?&lt;&gt;i enjoy hanging with my mother she is my best friend&lt;&gt;that is nice . moms are pretty cool too .&lt;&gt;i am also fascinated with mermaids&lt;&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>No, no, it's my fault -- we didn't have a proper introduction ---&lt;&gt;Cameron.&lt;&gt;The thing is, Cameron -- I'm at the mercy of a particularly hideous breed of loser.  My sister.  I can't date until she does.&lt;&gt;Seems like she could get a date easy enough...</td>\n",
+       "      <td>we all live in a yellow submarine , a yellow submarine . morning !&lt;&gt;hi ! that is a great line for my next stand up .&lt;&gt;lol . i am shy , anything to break the ice , and i am a beatles fan .&lt;&gt;i can tell . i am not , you can see me in some tv shows&lt;&gt;really ? what shows ? i like tv , it makes me forget i do not like my family&lt;&gt;wow , i wish i had a big family . i grew up in a very small town .&lt;&gt;i did too . i do not get along with mine . they have no class .&lt;&gt;just drink some cola with rum and you will forget about them !&lt;&gt;put the lime in the coconut as well . . .&lt;&gt;nah , plain cuba libre , that is what we drank yesterday at the theater .&lt;&gt;i prefer mojitos . watermelon or cucumber .&lt;&gt;those are really yummy too , but not my favorite .&lt;&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Why?&lt;&gt;Unsolved mystery.  She used to be really popular when she started high school, then it was just like she got sick of it or something.&lt;&gt;That's a shame.</td>\n",
+       "      <td>hi ! i work as a gourmet cook .&lt;&gt;i do not like carrots . i throw them away .&lt;&gt;really . but , i can sing pitch perfect .&lt;&gt;i also cook , and i ride my bike to work .&lt;&gt;great ! i had won an award for spelling bee .&lt;&gt;my contacts can see through what you are trying to sell me .&lt;&gt;okay but i was published in new yorker once&lt;&gt;you better not make any spelling mistakes .&lt;&gt;i have not . i can cook any word you want me to&lt;&gt;what is your ethnicity ? i am white , and my hair is brown .&lt;&gt;i am asian and have no hair .&lt;&gt;i love hairless asians . do you like carrots ?&lt;&gt;i love carrots . i eat carrots like a horse .&lt;&gt;are you male or female ?&lt;&gt;i work as a gourmet cook who also has a pitch perfect voice .&lt;&gt;i doubt that very much . you probably like to scream alone .&lt;&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Gosh, if only we could find Kat a boyfriend...&lt;&gt;Let me see what I can do.</td>\n",
+       "      <td>how are you doing today&lt;&gt;what do you do for career ? i have a ton of hobbies if you are interested !&lt;&gt;i like to watch kids&lt;&gt;i actually play guitar and do a lot of manly things , like welding .&lt;&gt;what do you weld ? houses ?&lt;&gt;everything ! i am actually manly . but i have a secret i am hiding .&lt;&gt;what is your secret that you have&lt;&gt;my parents do not know that i am . . . homosexual .&lt;&gt;how does that feel for you&lt;&gt;makes me secure with my manly hobby skills .&lt;&gt;i bet that it does&lt;&gt;anyway . what do you do ?&lt;&gt;i watch kids for a living&lt;&gt;that is awesome . do you like it ?&lt;&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                                                                                                                             dialogue\n",
-       "0  Can we make this quick?  Roxanne Korrine and Andrew Barrett are having an incredibly horrendous public break- up on the quad.  Again.<>Well, I thought we'd start with pronunciation, if that's okay with you.<>Not the hacking and gagging and spitting part.  Please.<>Okay... then how 'bout we try out some French cuisine.  Saturday?  Night?\n",
-       "1                                                                                                                                                                                                                                                                          You're asking me out.  That's so cute. What's your name again?<>Forget it.\n",
-       "2                                                                                          No, no, it's my fault -- we didn't have a proper introduction ---<>Cameron.<>The thing is, Cameron -- I'm at the mercy of a particularly hideous breed of loser.  My sister.  I can't date until she does.<>Seems like she could get a date easy enough...\n",
-       "3                                                                                                                                                                                        Why?<>Unsolved mystery.  She used to be really popular when she started high school, then it was just like she got sick of it or something.<>That's a shame.\n",
-       "4                                                                                                                                                                                                                                                                           Gosh, if only we could find Kat a boyfriend...<>Let me see what I can do."
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  dialogue\n",
+       "0  hi , how are you doing ? i am getting ready to do some cheetah chasing to stay in shape .<>you must be very fast . hunting is one of my favorite hobbies .<>i am ! for my hobby i like to do canning or some whittling .<>i also remodel homes when i am not out bow hunting .<>that is neat . when i was in high school i placed 6th in 100m dash !<>that is awesome . do you have a favorite season or time of year ?<>i do not . but i do have a favorite meat since that is all i eat exclusively .<>what is your favorite meat to eat ?<>i would have to say its prime rib . do you have any favorite foods ?<>i like chicken or macaroni and cheese .<>do you have anything planned for today ? i think i am going to do some canning .<>i am going to watch football . what are you canning ?<>i think i will can some jam . do you also play footfall for fun ?<>if i have time outside of hunting and remodeling homes . which is not much !<>\n",
+       "1                                                                                                                                                                                                 hi , how are you doing today ?<>i am spending time with my 4 sisters what are you up to<>wow , four sisters . just watching game of thrones .<>that is a good show i watch that while drinking iced tea<>i agree . what do you do for a living ?<>i am a researcher i am researching the fact that mermaids are real<>interesting . i am a website designer . pretty much spend all my time on the computer .<>that is cool my mom does the same thing<>that is awesome . i have always had a love for technology .<>tell me more about yourself<>i really enjoy free diving , how about you , have any hobbies ?<>i enjoy hanging with my mother she is my best friend<>that is nice . moms are pretty cool too .<>i am also fascinated with mermaids<>\n",
+       "2                                                                                                                                                                                         we all live in a yellow submarine , a yellow submarine . morning !<>hi ! that is a great line for my next stand up .<>lol . i am shy , anything to break the ice , and i am a beatles fan .<>i can tell . i am not , you can see me in some tv shows<>really ? what shows ? i like tv , it makes me forget i do not like my family<>wow , i wish i had a big family . i grew up in a very small town .<>i did too . i do not get along with mine . they have no class .<>just drink some cola with rum and you will forget about them !<>put the lime in the coconut as well . . .<>nah , plain cuba libre , that is what we drank yesterday at the theater .<>i prefer mojitos . watermelon or cucumber .<>those are really yummy too , but not my favorite .<>\n",
+       "3                                                                                                                                                                         hi ! i work as a gourmet cook .<>i do not like carrots . i throw them away .<>really . but , i can sing pitch perfect .<>i also cook , and i ride my bike to work .<>great ! i had won an award for spelling bee .<>my contacts can see through what you are trying to sell me .<>okay but i was published in new yorker once<>you better not make any spelling mistakes .<>i have not . i can cook any word you want me to<>what is your ethnicity ? i am white , and my hair is brown .<>i am asian and have no hair .<>i love hairless asians . do you like carrots ?<>i love carrots . i eat carrots like a horse .<>are you male or female ?<>i work as a gourmet cook who also has a pitch perfect voice .<>i doubt that very much . you probably like to scream alone .<>\n",
+       "4                                                                                                                                                                                                                                                                                                                                                                    how are you doing today<>what do you do for career ? i have a ton of hobbies if you are interested !<>i like to watch kids<>i actually play guitar and do a lot of manly things , like welding .<>what do you weld ? houses ?<>everything ! i am actually manly . but i have a secret i am hiding .<>what is your secret that you have<>my parents do not know that i am . . . homosexual .<>how does that feel for you<>makes me secure with my manly hobby skills .<>i bet that it does<>anyway . what do you do ?<>i watch kids for a living<>that is awesome . do you like it ?<>"
       ]
      },
      "execution_count": 12,
@@ -330,7 +330,7 @@
     {
      "data": {
       "text/plain": [
-       "dialogue    83097\n",
+       "dialogue    8939\n",
        "dtype: int64"
       ]
      },
@@ -405,15 +405,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83097/83097 [00:24<00:00, 3343.00it/s]"
+      "100%|██████████| 8939/8939 [00:10<00:00, 858.97it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.7 s, sys: 193 ms, total: 24.9 s\n",
-      "Wall time: 24.9 s\n"
+      "CPU times: user 10.4 s, sys: 88.7 ms, total: 10.4 s\n",
+      "Wall time: 10.4 s\n"
      ]
     },
     {
@@ -472,7 +472,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83097/83097 [00:00<00:00, 128925.40it/s]\n"
+      "100%|██████████| 8939/8939 [00:00<00:00, 41975.96it/s]\n"
      ]
     }
    ],
@@ -502,7 +502,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83097/83097 [00:00<00:00, 118814.36it/s]\n"
+      "100%|██████████| 8939/8939 [00:00<00:00, 19940.22it/s]\n"
      ]
     }
    ],
@@ -535,7 +535,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 138135/138135 [00:01<00:00, 93682.73it/s]\n"
+      "100%|██████████| 65719/65719 [00:01<00:00, 44884.18it/s]\n"
      ]
     }
    ],
@@ -598,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 138135/138135 [00:00<00:00, 309524.09it/s]\n"
+      "100%|██████████| 65719/65719 [00:00<00:00, 206130.45it/s]\n"
      ]
     }
    ],
@@ -678,9 +678,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Input IDs shape: torch.Size([138135, 1579])\n",
-      "Token Type IDs shape: torch.Size([138135, 1579])\n",
-      "Labels shape: torch.Size([138135, 1579])\n"
+      "Input IDs shape: torch.Size([65719, 557])\n",
+      "Token Type IDs shape: torch.Size([65719, 557])\n",
+      "Labels shape: torch.Size([65719, 557])\n"
      ]
     }
    ],
@@ -712,7 +712,7 @@
      "text": [
       "HF dataset: Dataset({\n",
       "    features: ['input_ids', 'token_type_ids', 'labels'],\n",
-      "    num_rows: 138135\n",
+      "    num_rows: 65719\n",
       "})\n"
      ]
     }
@@ -748,11 +748,11 @@
       "Data splits: DatasetDict({\n",
       "    train: Dataset({\n",
       "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
-      "        num_rows: 124321\n",
+      "        num_rows: 59147\n",
       "    })\n",
       "    validation: Dataset({\n",
       "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
-      "        num_rows: 13814\n",
+      "        num_rows: 6572\n",
       "    })\n",
       "})\n"
      ]
@@ -785,9 +785,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Flattening the indices: 100%|██████████| 125/125 [00:12<00:00, 10.20ba/s]\n",
-      "Flattening the indices: 100%|██████████| 14/14 [00:01<00:00,  9.88ba/s]                          \n",
-      "                                                                                                \r"
+      "Flattening the indices: 100%|██████████| 60/60 [00:04<00:00, 13.16ba/s]\n",
+      "Flattening the indices: 100%|██████████| 7/7 [00:00<00:00, 13.95ba/s]                           \n",
+      "                                                                                              \r"
      ]
     }
    ],
@@ -799,6 +799,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9c301558-0011-4059-8237-1bf6da4dfc9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c86fff2-dc46-4ca2-98ae-cfc9518bae29",
    "metadata": {},
    "outputs": [],
    "source": []
