--- a/02-train/01-finetune.ipynb
+++ b/02-train/01-finetune.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2d1f2c96-b268-413d-b119-601e47fbe31c",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9349fb86-f117-4243-bc94-071f5c751749",
    "metadata": {
     "tags": []
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "10032c8c-1496-4419-a73d-c70892cd615f",
    "metadata": {
     "tags": []
@@ -97,12 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c4b6cc81-08e1-4176-a021-4c29ffb17bc2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Using transformers version: 4.21.0]\n",
+      "[Using datasets version: 2.9.0]\n",
+      "[Using torch version: 1.13.1+cu117]\n",
+      "[Using wandb version: 0.13.10]\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'[Using transformers version: {transformers.__version__}]')\n",
     "logger.info(f'[Using datasets version: {datasets.__version__}]')\n",
@@ -120,19 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7c36ff70-582b-4693-ac9a-a0c08f7fbe86",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
+     ]
+    }
+   ],
    "source": [
     "!wandb login 8489739d838b89d2f424147f354f9db40517c1c9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "edc2f2d8-ef32-475e-a2af-c102bafb5e2f",
    "metadata": {
     "tags": []
@@ -153,10 +172,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "04752875-561c-4c43-90d6-74c14cf96233",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
+      "        num_rows: 59147\n",
+      "    })\n",
+      "    validation: Dataset({\n",
+      "        features: ['input_ids', 'token_type_ids', 'labels'],\n",
+      "        num_rows: 6572\n",
+      "    })\n",
+      "})\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.31 s, sys: 1.81 s, total: 4.12 s\n",
+      "Wall time: 2min 18s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time \n",
     "\n",
@@ -166,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1e8dd262-5278-4919-acc8-85364c15b84b",
    "metadata": {
     "tags": []
@@ -191,12 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "99a9aaf2-a33d-4af2-a334-ab02a8481127",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PreTrainedTokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_len=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True)})\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained('EleutherAI/gpt-neo-125M')\n",
     "logger.info(tokenizer)"
@@ -204,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "129d19db-5b58-444b-8d92-8da8bda7fba5",
    "metadata": {
     "tags": []
@@ -219,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5233d54e-147a-42fc-91f8-447167eefa92",
    "metadata": {
     "tags": []
@@ -232,12 +284,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7539be46-d3b2-462d-96c7-b7fbe80ba1f6",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PreTrainedTokenizerFast(name_or_path='EleutherAI/gpt-neo-125M', vocab_size=50257, model_max_len=2048, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|startoftext|>', 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'additional_special_tokens': ['<|speaker-1|>', '<|speaker-2|>', '<|pad|>', '<|mask|>']})\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(tokenizer)"
    ]
@@ -252,12 +312,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3c420136-107e-423c-bf87-01f8cf8023f4",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 17.1 s, sys: 5.14 s, total: 22.2 s\n",
+      "Wall time: 7.98 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -278,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "de0dc62c-65b0-4d0f-8b73-36712c2b8048",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "TRAIN_EPOCHS = 2\n",
+    "TRAIN_EPOCHS = 10\n",
     "TRAIN_BATCH_SIZE = 4\n",
     "EVAL_BATCH_SIZE = 4\n",
     "LOGGING_STEPS = 64\n",
@@ -295,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "40228f8b-26f0-45c0-bb02-c0cbccbee3b1",
    "metadata": {
     "tags": []
@@ -329,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b6d0e64c-19fa-4d5b-8628-1fbf9dc38146",
    "metadata": {
     "tags": []
@@ -345,12 +421,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d8111307-2212-41e4-bf10-50c1cdc3b135",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "***** Running training *****\n",
+      "  Num examples = 59147\n",
+      "  Num Epochs = 10\n",
+      "  Instantaneous batch size per device = 4\n",
+      "  Total train batch size (w. parallel, distributed & accumulation) = 32\n",
+      "  Gradient Accumulation steps = 1\n",
+      "  Total optimization steps = 18490\n",
+      "Automatic Weights & Biases logging enabled, to disable set os.environ[\"WANDB_DISABLED\"] = \"true\"\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mshankar-arunp\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.13.10"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/root/multi-turn-chatbot-gpt-sagemaker/02-train/wandb/run-20230219_074626-gupsw8fw</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/shankar-arunp/huggingface/runs/gupsw8fw' target=\"_blank\">./model</a></strong> to <a href='https://wandb.ai/shankar-arunp/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/shankar-arunp/huggingface' target=\"_blank\">https://wandb.ai/shankar-arunp/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/shankar-arunp/huggingface/runs/gupsw8fw' target=\"_blank\">https://wandb.ai/shankar-arunp/huggingface/runs/gupsw8fw</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Using NamedTuple = typing._NamedTuple instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-02-19 07:46:35.251 pytorch-1-13-gpu--ml-p3dn-24xlarge-8074c3648d51bc88d30c560a1061:18969 INFO utils.py:28] RULE_JOB_STOP_SIGNAL_FILENAME: None\n",
+      "[2023-02-19 07:46:35.271 pytorch-1-13-gpu--ml-p3dn-24xlarge-8074c3648d51bc88d30c560a1061:18969 INFO profiler_config_parser.py:111] Unable to find config at /opt/ml/input/config/profilerconfig.json. Profiler is disabled.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.9/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='18490' max='18490' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [18490/18490 4:29:46, Epoch 10/10]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.113200</td>\n",
+       "      <td>0.113472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.105200</td>\n",
+       "      <td>0.106144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.100200</td>\n",
+       "      <td>0.102726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.098400</td>\n",
+       "      <td>0.100338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>0.093900</td>\n",
+       "      <td>0.099107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>0.091000</td>\n",
+       "      <td>0.098436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>0.088800</td>\n",
+       "      <td>0.097934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>0.088700</td>\n",
+       "      <td>0.098124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>0.086100</td>\n",
+       "      <td>0.097971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>0.082500</td>\n",
+       "      <td>0.098316</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "Saving model checkpoint to ./model/checkpoint-10240\n",
+      "Configuration saved in ./model/checkpoint-10240/config.json\n",
+      "Model weights saved in ./model/checkpoint-10240/pytorch_model.bin\n",
+      "/opt/conda/lib/python3.9/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 6572\n",
+      "  Batch size = 32\n",
+      "\n",
+      "\n",
+      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5h 34min 59s, sys: 2h 27min 15s, total: 8h 2min 14s\n",
+      "Wall time: 4h 30min 9s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=18490, training_loss=0.10060630164448153, metrics={'train_runtime': 16208.8665, 'train_samples_per_second': 36.491, 'train_steps_per_second': 1.141, 'total_flos': 1.6807492609256448e+17, 'train_loss': 0.10060630164448153, 'epoch': 10.0})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time \n",
     "\n",
@@ -367,19 +684,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6eedfffd-9bf6-4f35-bc39-9d7d7b061e7e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cc2cd96-31a8-4f81-8c27-e2ca2dfee7c4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving model checkpoint to ./model/chatbot\n",
+      "Configuration saved in ./model/chatbot/config.json\n",
+      "Model weights saved in ./model/chatbot/pytorch_model.bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainer.save_model('./model/chatbot')"
+   ]
   },
   {
    "cell_type": "code",
