--- a/03-evaluate/01-evaluate.ipynb
+++ b/03-evaluate/01-evaluate.ipynb
@@ -20,7 +20,8 @@
     "%%capture \n",
     "\n",
     "!pip install torch==1.12.1+cu113\n",
-    "!pip install transformers==4.21.0"
+    "!pip install transformers==4.21.0\n",
+    "!pip install ipywidgets==8.0.4"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "33bf3309-ea9f-46c2-b84b-ae36c7f1247b",
    "metadata": {
     "tags": []
@@ -42,6 +43,7 @@
    "source": [
     "from transformers import AutoTokenizer\n",
     "from torch.nn import functional as F\n",
+    "from getpass import getpass\n",
     "from itertools import chain\n",
     "import transformers \n",
     "import logging\n",
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "af530362-4671-4a5b-959a-5eb676fe537f",
    "metadata": {
     "tags": []
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "646e35a4-0e2a-447b-ada2-a3a9fe78d78b",
    "metadata": {
     "tags": []
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b98a5c12-728d-4a46-86a8-6885ebb43163",
    "metadata": {
     "tags": []
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "48f37987-5311-40db-8995-183c00573e0b",
    "metadata": {
     "tags": []
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "947779cd-ba55-402f-9958-eacdd21f1ce5",
    "metadata": {
     "tags": []
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5f7cd127-51b4-48a3-a1bb-af52aff5f27b",
    "metadata": {
     "tags": []
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "8740f8e2-4d5e-4085-b7aa-c5e2ce5e365f",
    "metadata": {
     "tags": []
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "97106876-4e08-4db4-b236-438b1654c45a",
    "metadata": {
     "tags": []
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "4db1edd7-f766-4048-8111-f67195f1158e",
    "metadata": {
     "tags": []
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "fd5b48b8-878e-4d40-9753-9356bd467f42",
    "metadata": {
     "tags": []
@@ -295,7 +297,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
+   "id": "1a67f0e0-d459-4da4-b224-535e2a60066b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bos_id = 50257\n",
+      "eos_id = 50256\n",
+      "speaker_1_id = 50258\n",
+      "speaker_2_id = 50259\n",
+      "mask = 50261\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(f'bos_id = {bos_id}')\n",
+    "logger.info(f'eos_id = {eos_id}')\n",
+    "logger.info(f'speaker_1_id = {speaker_1_id}')\n",
+    "logger.info(f'speaker_2_id = {speaker_2_id}')\n",
+    "logger.info(f'mask = {mask}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "eb3a93a1-67d7-4501-9b5e-13f75b630989",
    "metadata": {
     "tags": []
@@ -311,8 +341,6 @@
     "    input_ids = [speaker_1_id] + input_ids\n",
     "    input_ids_turns.append(input_ids)\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    # Add beginning of sequence and end of sequence ids to input_ids, and convert it to a tensor\n",
     "    input_ids = [bos_id] + list(chain.from_iterable(input_ids_turns)) + [speaker_2_id]\n",
     "    \n",
@@ -323,8 +351,6 @@
     "    \n",
     "    # Create token type ids for each turn based on the speaker of the turn\n",
     "    token_type_ids = [[start_sp_id] * len(turn) if h % 2 == 0 else [next_sp_id] * len(turn) for h, turn in enumerate(input_ids_turns)]\n",
-    "    \n",
-    "    \n",
     "    \n",
     "    # Add beginning of sequence and end of sequence ids to token_type_ids, and convert it to a tensor\n",
     "    token_type_ids = [start_sp_id] + list(chain.from_iterable(token_type_ids)) + [speaker_2_id]\n",
@@ -340,67 +366,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "974b624e-9213-46e3-8ac2-5585d9ea1835",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[50257, 50258,    72,  5465,   616,  1204, 50259]], device='cuda:0'),\n",
-       " tensor([[50258, 50258, 50258, 50258, 50258, 50258, 50259]], device='cuda:0'),\n",
-       " 7)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenize('i hate my life')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a86b947-4123-41b2-9bd3-88fd61b50b99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "5b9390c0-cb7f-4c78-8835-543eb7943c83",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "MAX_LEN = 64\n",
-    "top_p = 0.9"
+    "MAX_LEN = 128\n",
+    "TOP_P = 0.8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "f70feffb-b36f-480f-aca4-f62cc262c828",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def generate(query: str) -> str:\n",
+    "def nucleus_sampling(input_ids, token_type_ids, input_len) -> str:\n",
     "    output_ids = []\n",
-    "    \n",
-    "    input_ids, token_type_ids, input_len = tokenize(query)\n",
-    "    \n",
-    "    print(input_ids)\n",
-    "    print(token_type_ids)\n",
-    "    print(input_len)\n",
     "    \n",
     "    for i in range(input_len, MAX_LEN):\n",
     "        output = model(input_ids=input_ids, token_type_ids=token_type_ids)[0][:, i-1]\n",
@@ -410,7 +397,7 @@
     "        sorted_probs, sorted_idxs = torch.sort(probs, descending=True)\n",
     "        cumsum_probs = torch.cumsum(sorted_probs, dim=-1)  # (1, V)\n",
     " \n",
-    "        idx_remove = cumsum_probs > top_p\n",
+    "        idx_remove = cumsum_probs > TOP_P\n",
     "        idx_remove[:, 1:] = idx_remove[:, :-1].clone()\n",
     "        idx_remove[:, 0] = False\n",
     "        sorted_probs[idx_remove] = 0.0\n",
@@ -419,55 +406,255 @@
     "        idx = torch.multinomial(probs, num_samples=1)\n",
     "        idx_item = idx.squeeze(-1).squeeze(-1).item()\n",
     "        output_ids.append(idx_item)\n",
+    "        \n",
     "        if idx_item == eos_id:\n",
     "            break\n",
     "\n",
     "        input_ids = torch.cat((input_ids, idx), dim=-1)\n",
     "        next_type_id = torch.LongTensor([[speaker_2_id]]).to(device)\n",
     "        token_type_ids = torch.cat((token_type_ids, next_type_id), dim=-1)\n",
-    "    response = tokenizer.decode(output_ids, skip_special_tokens=True).strip()\n",
-    "    #response = tokenizer.decode(output_ids)\n",
-    "    return response"
+    "    return output_ids"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ff3e406-9169-4280-8173-58f63e9c42f4",
+   "metadata": {},
+   "source": [
+    "#### Interactive Chat "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "cf0c4b55-a380-457f-857e-d80e25ec1bb2",
+   "execution_count": 30,
+   "id": "51a3b11a-4dfc-471e-870e-88abe53d6f89",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "RESET_CMD = 'reset'\n",
+    "MAX_TURNS = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "06a8d312-919f-4ed0-97ba-9c33dfa2b703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat():\n",
+    "    logger.info('[Entering chat session ...]')\n",
+    "    logger.info(f'To quit the conversation and reset memory, please type \"{RESET_CMD}\"')\n",
+    "    query_history = []\n",
+    "            \n",
+    "    while True:\n",
+    "        utterance = input('You: ')\n",
+    "        if utterance == RESET_CMD:\n",
+    "            logger.info(f'[Exiting chat session]')\n",
+    "            break\n",
+    "            \n",
+    "        # Add speaker 1 id to start of query and encode it using the tokenizer\n",
+    "        input_ids = tokenizer.encode(utterance)\n",
+    "        input_ids = [speaker_1_id] + input_ids\n",
+    "        query_history.append(input_ids)\n",
+    "        \n",
+    "        if len(query_history) >= MAX_TURNS:\n",
+    "            num_exceeded = len(query_history) - MAX_TURNS + 1\n",
+    "            query_history = query_history[num_exceeded:]\n",
+    "            \n",
+    "        # Add beginning of sequence and end of sequence ids to input_ids, and convert it to a tensor\n",
+    "        input_ids = [bos_id] + list(chain.from_iterable(query_history)) + [speaker_2_id]\n",
+    "\n",
+    "        # Determine the speaker of the first turn based on the first speaker id\n",
+    "        start_sp_id = query_history[0][0]\n",
+    "        # Determine the speaker of the next turn\n",
+    "        next_sp_id = speaker_1_id if start_sp_id == speaker_2_id else speaker_2_id\n",
+    "\n",
+    "        # Create token type ids for each turn based on the speaker of the turn\n",
+    "        token_type_ids = [[start_sp_id] * len(turn) if h % 2 == 0 else [next_sp_id] * len(turn) for h, turn in enumerate(query_history)]\n",
+    "\n",
+    "        # Add beginning of sequence and end of sequence ids to token_type_ids, and convert it to a tensor\n",
+    "        token_type_ids = [start_sp_id] + list(chain.from_iterable(token_type_ids)) + [speaker_2_id]\n",
+    "\n",
+    "        # Determine the length of the input_ids tensor\n",
+    "        input_len = len(input_ids)\n",
+    "\n",
+    "        input_ids = torch.LongTensor(input_ids).unsqueeze(0).to(device)\n",
+    "        token_type_ids = torch.LongTensor(token_type_ids).unsqueeze(0).to(device)\n",
+    "        \n",
+    "        output_ids = nucleus_sampling(input_ids, token_type_ids, input_len)   \n",
+    "        response = tokenizer.decode(output_ids, skip_special_tokens=True)\n",
+    "        print(f'Bot: {response}')\n",
+    "        query_history.append([speaker_2_id] + tokenizer.encode(response))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c6a69896-4604-4435-a368-b4ab8ac0ee35",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tensor([[50257, 50258, 33331,   502,   546,  3511,  5633, 50259]],\n",
-      "       device='cuda:0')\n",
-      "tensor([[50258, 50258, 50258, 50258, 50258, 50258, 50258, 50259]],\n",
-      "       device='cuda:0')\n",
-      "8\n"
+      "bos_id = 50257\n",
+      "eos_id = 50256\n",
+      "speaker_1_id = 50258\n",
+      "speaker_2_id = 50259\n",
+      "mask = 50261\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'my bad today is just chilling for now'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate('tell me about yourself ?')"
+    "logger.info(f'bos_id = {bos_id}')\n",
+    "logger.info(f'eos_id = {eos_id}')\n",
+    "logger.info(f'speaker_1_id = {speaker_1_id}')\n",
+    "logger.info(f'speaker_2_id = {speaker_2_id}')\n",
+    "logger.info(f'mask = {mask}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "14fa27e7-2be4-453b-b7f7-d25419fb8dbb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Entering chat session ...]\n",
+      "To quit the conversation and reset memory, please type \"reset\"\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  hello bot\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: what is this afternoon\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  sad and sleepy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: i?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  what about you?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: you are awake.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  Yes, I am \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: in\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  my sleep\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: i\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  be more elaborate\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: i\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  boring\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot: that is\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  reset\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Exiting chat session]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chat()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dec552e3-26d4-4fe2-b1d7-10acb959f356",
+   "id": "446c6189-716e-4d8c-92b5-748bf10e031f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -475,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06a8d312-919f-4ed0-97ba-9c33dfa2b703",
+   "id": "6c6f014a-749a-4338-8882-99f9a9cbce4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -483,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05384ecc-815e-4719-bf7f-c3c9f03a0b8a",
+   "id": "a707fe9c-99d2-4aac-ac87-c2e726b4715c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -978,7 +1165,6 @@
     "vcpuNum": 192
    }
   ],
-  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (PyTorch 1.13 Python 3.9 GPU Optimized)",
    "language": "python",
